--- a/NetCommunitySolution.Web/Views/Home/Index.cshtml
+++ b/NetCommunitySolution.Web/Views/Home/Index.cshtml
@@ -1,29 +1,19 @@
 ﻿@{
+    Layout = "~/Views/Shared/_HomeLayout.cshtml";
     ViewBag.ActiveMenu = "Home"; //The menu item will be active for this page.
 }
-<div>
-    <h1>@L("WelcomeMessage")!</h1>
-    <p class="lead">@L("Home_ThisIsATemplate")</p>
-    <div class="row">
-        <div class="col-md-4">
-            <h3>ASP.NET MVC</h3>
-            <p>
-                @L("Home_AspNetDescription")
-            </p>
-            <a class="btn btn-primary btn-sm" href="http://asp.net/mvc">@L("LearnMore")..</a>
-        </div>
-        <div class="col-md-4">
-            <h3>ASP.NET Boilerplate</h3>
-            <p>
-                @L("Home_AspNetBoilerplateDescription")
-            </p>
-            <a class="btn btn-primary btn-sm" href="http://aspnetboilerplate.com">@L("LearnMore")..</a>
-        </div>
-        <div class="col-md-4">
-            <h3>@L("Others")</h3>
-            <p>
-                @L("Home_OtherTools")
-            </p>
-        </div>
+
+<div class="row">
+    <!-- 首页 类目-->
+    <div class="col-md-2">
+        @Html.Action("TopMenu", "Catalog")
+    </div>
+
+    <div class="col-md-7">
+
+    </div>
+
+    <div class="col-md-3">
+
     </div>
 </div>
