--- a/NetCommunitySolution.Web/Content/login.css
+++ b/NetCommunitySolution.Web/Content/login.css
@@ -66,3 +66,8 @@
                     padding:0;
                 
                 }
+
+.buttons {
+    margin-top: 15px;
+    text-align:center;
+}
