--- a/NetCommunitySolution.Web/Views/Customer/CustomerStatus.cshtml
+++ b/NetCommunitySolution.Web/Views/Customer/CustomerStatus.cshtml
@@ -1,35 +1,47 @@
 ﻿@model NetCommunitySolution.Web.Models.Customers.SimpleCustomerModel
 
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/"><i class="fa fa-cubes"></i> NetCommunitySolution</a>
-        </div>
-        <div class="collapse navbar-collapse">
-            <div class="search-box pull-left">
-                <input type="text" placeholder="关键字搜索" class="search-input" />
-                <a class="search-btn">搜索</a>
-            </div>
-            <ul class="pull-right customer-status">
-                @if (Model.Id > 0)
-                {
-                    <li>@Model.NickName</li>
-                    <li><a href="@Url.Action("Logout", "Customer")">退出</a></li>
-                }
-                else
-                {
-                    <li><a href="@Url.Action("Login", "Customer")">登录</a></li>
-                    <li><a href="@Url.Action("Register", "Customer")">注册</a></li>
 
-                }
-            </ul>
+<div class="layui-layout layui-layout-admin">
+    <div class="layui-header">
 
+        <div class="layui-logo">layui 后台布局</div>
+        <div class="search-box layui-layout-left">
+            <input type="text" placeholder="关键字搜索" class="search-input" />
+            <a class="layui-btn layui-btn-danger search-btn">搜索</a>
         </div>
+        <ul class="layui-nav layui-layout-right customer-status" lay-filter="customer-nav">
+            @if (Model.Id > 0)
+            {
+                <li class="layui-nav-item">
+                    <a id="member-center" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        @Model.LoginName
+                        <span class="caret"></span>
+                    </a>
+                    <dl class="layui-nav-child">
+                        <dd class="member-item"><a>会员中心</a></dd>
+                        <dd class="member-item"><a>发布问答</a></dd>
+                        <dd class="member-item"><a>修改密码</a></dd>
+                    </dl>
+                </li>
+                <li class="layui-nav-item"><a href="@Url.Action("Logout", "Customer")">退出</a></li>
+            }
+            else
+            {
+                <li class="layui-nav-item"><a href="@Url.Action("Login", "Customer")">登录</a></li>
+                <li class="layui-nav-item"><a href="@Url.Action("Register", "Customer")">注册</a></li>
+
+            }
+        </ul>
     </div>
 </div>
+
+<script>
+    layui.use('element', function () {
+        var element = layui.element; //导航的hover效果、二级菜单等功能，需要依赖element模块
+        element.render();
+        //监听导航点击
+        element.on('nav(customer-nav)', function (elem) {
+            layer.msg(elem.text());
+        });
+    });
+</script>
