--- a/NetCommunitySolution.Web/Views/Customer/Register.cshtml
+++ b/NetCommunitySolution.Web/Views/Customer/Register.cshtml
@@ -1,5 +1,5 @@
 ﻿@model NetCommunitySolution.Web.Models.Customers.RegisterModel
-
+@using NetCommunitySolution.Domain.Settings;
 @{
     Layout = null;
 }
@@ -11,10 +11,9 @@
     <meta name="viewport" content="width=device-width" />
     <title>NET社区 - - 注册</title>
     <link rel="stylesheet" type="text/css" href="~/Content/login.css" />
-    <link rel="stylesheet" type="text/css" href="~/Content/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="~/Content/bootstrap-cosmo.min.css" />
-    <script type="text/javascript" src="~/Scripts/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="~/Scripts/bootstrap.min.js"></script>
+    @Styles.Render("~/layui/css")
+    @Scripts.Render("~/Bundles/vendor/js/bottom")
+    @Scripts.Render("~/layui/js")
 </head>
 <body class="login">
     <div class="container">
@@ -35,41 +34,59 @@
             }
         }
 
-
         <div class="span12">
             <div class="login_m">
                 <div class="login-header">
-                    <h5>NET社区用户登录</h5>
+                    <h5>NET社区用户注册</h5>
                 </div>
 
                 <div class="login-body">
-                    @using (Html.BeginForm("Login", "Customer", FormMethod.Post, new { @id = "login-form", @class = "form-horizontal", role = "form" }))
+                    @using (Html.BeginForm("Register", "Customer", FormMethod.Post, new { @id = "login-form", @class = "layui-form" }))
                     {
 
                         @Html.AntiForgeryToken()
-                        <div class="control-group">
-                            @Html.LabelFor(model => model.LoginName, new { @class = "control-label" })
-                            <div class="controls">
-                                @Html.TextBoxFor(model => model.LoginName, new { @class = "form-control" })
+
+                        <div class="layui-form-item" pane="">
+                            <div class="layui-input-block">
+                                @Html.NETRadioButtonFor(Model => Model.RegisterMode, RegistrationMode.Mobile, new { title = "手机号", @checked = "checked" }, "mode")
+                                @Html.NETRadioButtonFor(Model => Model.RegisterMode, RegistrationMode.Email, new { title = "邮箱" }, "mode")
+                                @Html.NETRadioButtonFor(Model => Model.RegisterMode, RegistrationMode.UserName, new { title = "账号" }, "mode")
                             </div>
                         </div>
-                        <div class="control-group">
-                            @Html.LabelFor(model => model.Password, new { @class = "control-label" })
-                            <div class="controls">
-                                @Html.PasswordFor(model => model.Password, new { @class = "form-control" })
+                        <div class="layui-form-item panel-@RegistrationMode.Mobile panel-registration-mode" pane="">
+                            @Html.NETLabelFor(model => model.Phone)
+                            <div class="layui-input-block">
+                                @Html.NETEditorFor(model => model.Phone)
                             </div>
                         </div>
-                        <div class="control-group clearfix">
-                            <div class="pull-left">
-                                @Html.CheckBoxFor(model => model.RememberMe)
-                                @Html.LabelFor(model => model.RememberMe, new { @class = "remeber" })
-                            </div>
-                            <div class="pull-right">
-                                <a class="forget" href="">忘记密码？</a>
+                        <div class="layui-form-item panel-@RegistrationMode.Email panel-registration-mode" pane="">
+                            @Html.NETLabelFor(model => model.Email)
+                            <div class="layui-input-block">
+                                @Html.NETEditorFor(model => model.Email)
                             </div>
                         </div>
-                        <div class="control-group text-center">
-                            <button class="btn btn-success">登录</button>
+                        <div class="layui-form-item panel-@RegistrationMode.UserName panel-registration-mode" pane="">
+                            @Html.NETLabelFor(model => model.LoginName)
+                            <div class="layui-input-block">
+                                @Html.NETEditorFor(model => model.LoginName)
+                            </div>
+                        </div>
+                        <div class="layui-form-item" pane="">
+                            @Html.NETLabelFor(model => model.Password)
+                            <div class="layui-input-block">
+                                @Html.NETEditorFor(model => model.Password)
+                            </div>
+                        </div>
+
+                        <div class="layui-form-item" pane="">
+                            @Html.NETLabelFor(model => model.ConfirmPassword)
+                            <div class="layui-input-block">
+                                @Html.NETEditorFor(model => model.ConfirmPassword)
+                            </div>
+                        </div>
+
+                        <div class="buttons">
+                            <input type="submit" class="layui-btn layui-btn-danger" value="注册" />
                         </div>
                     }
                 </div>
@@ -77,5 +94,29 @@
         </div>
     </div>
 
+    <script type="text/javascript">
+
+        $(document).ready(function () {
+            $(".panel-registration-mode").hide();
+                $(".panel-@RegistrationMode.Mobile").show();
+        });
+
+        function activateRegisterModediately(value) {
+            debugger;
+            var className = ".panel-" + value;
+            $(className).show();
+        }
+        layui.use('form', function () {
+            var form = layui.form;
+            //各种基于事件的操作，下面会有进一步介绍
+            form.render();
+
+            form.on('radio(mode)', function (data) {
+
+                $(".panel-registration-mode").hide();
+                activateRegisterModediately(data.value);
+            });
+        });
+    </script>
 </body>
 </html>
