--- a/NetCommunitySolution.Web/Views/Home/Index.cshtml
+++ b/NetCommunitySolution.Web/Views/Home/Index.cshtml
@@ -15,11 +15,13 @@
         
     </div>
 
-    <div class="layui-col-md7">
-
+    <div class="layui-col-md8">
+        <div class="content" style="padding:15px">
+            @Html.Action("HotPost", "Post")
+        </div>
     </div>
 
-    <div class="layui-col-md3">
+    <div class="layui-col-md2">
 
     </div>
 </div>
