--- a/NetCommunitySolution.Web/Areas/Operate/Views/Shared/_Sidebar.cshtml
+++ b/NetCommunitySolution.Web/Areas/Operate/Views/Shared/_Sidebar.cshtml
@@ -7,8 +7,9 @@
             <li class="layui-nav-item @if (ViewBag.ActiveMenu == "Setting") { <text> layui-nav-itemed</text>}" ify-unselect>
                 <a href="javascript:;">配置模块</a>
                 <dl class="layui-nav-child">
-                    <dd><a href="javascript:;" @if (ViewBag.ActiveItem == "Common-Setting") { <text>class="layui-this"</text>}>公共配置</a></dd>
-                    <dd><a href="javascript:;">选项二</a></dd>
+                    <dd><a href="@Url.Action("Common","Setting")" @if (ViewBag.ActiveItem == "Common-Setting") { <text> class="layui-this" </text> }>公共配置</a></dd>
+                    <dd><a href="@Url.Action("CustomerSetting","Setting")" @if (ViewBag.ActiveItem == "Customer-Setting") { <text> class="layui-this" </text> }>用户配置</a></dd>
+                    <dd><a href="@Url.Action("PostSetting","Setting")" @if (ViewBag.ActiveItem == "Post-Setting") { <text> class="layui-this" </text> }>帖子配置</a></dd>
                     <dd><a href="javascript:;">选项三</a></dd>
                     <dd><a href="">跳转项</a></dd>
                 </dl>
