--- a/NetCommunitySolution.Web/Views/Customer/CustomerStatus.cshtml
+++ b/NetCommunitySolution.Web/Views/Customer/CustomerStatus.cshtml
@@ -4,7 +4,7 @@
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
 
-        <div class="layui-logo">layui 后台布局</div>
+        <div class="layui-logo"><a href="@Url.Action("Index","Home")">layui 后台布局</a></div>
         <div class="search-box layui-layout-left">
             <input type="text" placeholder="关键字搜索" class="search-input" />
             <a class="layui-btn layui-btn-danger search-btn">搜索</a>
@@ -19,7 +19,7 @@
                     </a>
                     <dl class="layui-nav-child">
                         <dd class="member-item"><a>会员中心</a></dd>
-                        <dd class="member-item"><a>发布问答</a></dd>
+                        <dd class="member-item"><a href="@Url.Action("New","Post")">发布问答</a></dd>
                         <dd class="member-item"><a>修改密码</a></dd>
                     </dl>
                 </li>
@@ -39,9 +39,5 @@
     layui.use('element', function () {
         var element = layui.element; //导航的hover效果、二级菜单等功能，需要依赖element模块
         element.render();
-        //监听导航点击
-        element.on('nav(customer-nav)', function (elem) {
-            layer.msg(elem.text());
-        });
     });
 </script>
