1.增加了前端评论模块 2.增加了用户属性模块 3.增加了关注模块 4.增加了服务端媒体模块 5.增加了一堆东西，反正你们又看不懂

--- a/NetCommunitySolution.Web/Areas/Operate/Views/Setting/Common.cshtml
+++ b/NetCommunitySolution.Web/Areas/Operate/Views/Setting/Common.cshtml
@@ -30,13 +30,27 @@
         </div>
     </div>
     <div class="layui-form-item">
+        @Html.NETLabelFor(model => model.Name)
+
+        <div class="layui-input-block">
+            @Html.NETEditorFor(model => model.Name)
+        </div>
+    </div>
+
+    <div class="layui-form-item">
+        @Html.NETLabelFor(model => model.Subtitle)
+
+        <div class="layui-input-block">
+            @Html.NETEditorFor(model => model.Subtitle)
+        </div>
+    </div>
+    <div class="layui-form-item">
         @Html.NETLabelFor(model => model.Title)
 
         <div class="layui-input-block">
             @Html.NETEditorFor(model => model.Title)
         </div>
     </div>
-
     <div class="layui-form-item">
         @Html.NETLabelFor(model => model.Keywords)
 
