--- a/NetCommunitySolution.Web/Views/Post/HotPost.cshtml
+++ b/NetCommunitySolution.Web/Views/Post/HotPost.cshtml
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="summary">
-                    <h3 class=""><a href="@Url.Action("Detail", "Post", new { postId = item.Id })" title="@item.Title">@item.Title</a></h3>
+                    <h3><a class="hot-posts-title" href="@Url.Action("Detail", "Post", new { postId = item.Id })" title="@item.Title">@item.Title</a></h3>
                     <div class="labels">
                         <span class="label-tag">DI</span>
                         <span class="label-tag">AOP</span>
