--- a/NetCommunitySolution.Web/Areas/Operate/Views/Setting/CustomerSetting.cshtml
+++ b/NetCommunitySolution.Web/Areas/Operate/Views/Setting/CustomerSetting.cshtml
@@ -19,7 +19,7 @@
 <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
     <legend>公共配置</legend>
 </fieldset>
-@using (Html.BeginForm("CustomerSetting", "Setting", FormMethod.Post, new { @id = "common-setting", @class = "layui-form" }))
+@using (Html.BeginForm("CustomerSetting", "Setting", FormMethod.Post, new { @id = "customer-setting", @class = "layui-form" }))
 {
     @Html.AntiForgeryToken()
     <div class="layui-form-item">
