--- a/NetCommunitySolution.Web/Content/style.css
+++ b/NetCommunitySolution.Web/Content/style.css
@@ -1,9 +1,12 @@
 ﻿/* Common */
 a,a:hover{text-decoration:none;}
 
+.layui-nav-tree{
+    width:100%;
+}
 /* Top */
-.layui-header .layui-logo a{
-    color:#ff6a00;
+.layui-header .layui-logo a {
+    color: #ff6a00;
 }.navbar-fixed-top .customer-status {
     margin: 0;
     padding: 0;
@@ -26,7 +29,16 @@ a,a:hover{text-decoration:none;}
             background: #0066cc
         }
 
+.layui-header .layui-subtitle {
+    position:absolute;
+    height:100%;
+    line-height:60px;
+    left:200px;
+    color:#fff;
+    text-decoration:underline;
+}
 .layui-header .search-box {
+    left: 550px;
 }
     .layui-header .search-box .search-input {
         border: none;
@@ -56,11 +68,29 @@ a,a:hover{text-decoration:none;}
 .catalog-box {
     margin-top:15px;
 }
+    .catalog-box .category-title {
+        margin-top: 15px;
+        padding: 15px;
+        color: #4e5465;
+        border: 1px solid #4e5465
+    }
 .content-label-box {
     margin-top: 15px;
-    padding:15px;
-    border:1px solid #ccc;
 }
+
+    .content-label-box .content-label-title {
+        padding: 15px;
+        background: #4e5465;
+        color: #fff;
+        border-top-left-radius: 3px;
+        border-top-right-radius: 3px;
+    }
+
+    .content-label-box .content-label-body {
+        padding: 15px;
+        border:1px solid #ccc;
+        border-top:none;
+    }
 .customer-status .dropdown .dropdown-menu {
     background: #007fff;
 }
@@ -129,10 +159,13 @@ a,a:hover{text-decoration:none;}
         padding: 0 0 30px 0;
         margin-left: 200px;
     }
-        .hot-posts .question-item .summary h3 {
-            color: #009688;
-            font-weight:600
+        .hot-posts .question-item .summary .hot-posts-title {
+            color: #005999;
+            font-weight: 600
         }
+            .hot-posts .question-item .summary .hot-posts-title:hover {
+                color: #3AF;
+            }
  
 .hot-posts .question-item .summary .labels {
     margin-top: 11px;
@@ -160,4 +193,68 @@ a,a:hover{text-decoration:none;}
         .hot-posts .question-item .summary .customer {
             color:#000;
             font-weight:600;
+        }
+/* customer-info-box */
+
+.customer-info-box {
+    padding: 0 15px;
+    margin-top:15px;
+    position: relative;
+    background: #f2f2f2;
+}
+
+    .customer-info-box .avatar,
+    .customer-info-box .times {
+    }
+    .customer-info-box .avatar {
+        position:absolute;
+    }
+    .customer-info-box .times {
+            display: block;
+            margin-left: 108px;
+            height:96px;
+            padding-left:8px;            
+        }
+
+        .customer-info-box .times span {
+            display: block;
+            font-size: 12px;
+            line-height: 20px;
+        }
+        .customer-info-box .times h5 {
+            line-height: 36px;
+        }
+
+.post-from .comment-title {
+    background: #f2f2f2;
+    padding: 12px 4px;
+    margin-bottom:20px;
+}
+.post-from .comment-title h5{
+    color:#ff6a00;
+}
+
+/* Comment List*/
+.comment-list .comments .post-comment {
+position:relative;
+}
+
+    .comment-list .comments .post-comment .comment-info {
+        position: absolute;
+        width:100px;
+    }
+        .comment-list .comments .post-comment .comment-info .user-avatar {
+        }
+        .comment-list .comments .post-comment .comment-info .user-info {
+            margin-top: 15px;
+        }
+    .comment-list .comments .post-comment .comment-content {
+        display: block;
+        margin-left:120px;
+    }
+
+
+        .comment-list .comments .post-comment .comment-content .q_time {
+            color: #777;
+            font-size: 12px;
         }
