--- a/NetCommunitySolution.Web/Views/Customer/Login.cshtml
+++ b/NetCommunitySolution.Web/Views/Customer/Login.cshtml
@@ -10,11 +10,12 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>NET社区</title>
+    @Styles.Render("~/sytle/css")
+    @Styles.Render("~/layui/css")
     <link rel="stylesheet" type="text/css" href="~/Content/login.css" />
-    <link rel="stylesheet" type="text/css" href="~/Content/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="~/Content/bootstrap-cosmo.min.css" />
-    <script type="text/javascript" src="~/Scripts/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="~/Scripts/bootstrap.min.js"></script>
+    @Scripts.Render("~/jquery")
+    @Scripts.Render("~/layui/js")
+
     <link href="@BotDetect.Web.CaptchaUrls.Absolute.LayoutStyleSheetUrl" rel="stylesheet" type="text/css" />
 </head>
 <body class="login">
@@ -44,52 +45,83 @@
                 </div>
 
                 <div class="login-body">
-                    @using (Html.BeginForm("Login", "Customer", FormMethod.Post, new { @id = "login-form", @class = "form-horizontal", role = "form" }))
-    {
+                    @using (Html.BeginForm("Login", "Customer", FormMethod.Post, new { @id = "login-form", @class = "layui-form" }))
+                    {
 
-                @Html.AntiForgeryToken()
-                <div class="control-group">
-                    @Html.LabelFor(model => model.LoginName, new { @class = "control-label" })
-                    <div class="controls">
-                        @Html.TextBoxFor(model => model.LoginName, new { @class = "form-control" })
-                    </div>
-                </div>
-                <div class="control-group">
-                    @Html.LabelFor(model => model.Password, new { @class = "control-label" })
-                    <div class="controls">
-                        @Html.PasswordFor(model => model.Password, new { @class = "form-control" })
-                    </div>
-                </div>
+                        @Html.AntiForgeryToken()
 
-if (Model.EnabledCaptcha)
-{
-    MvcCaptcha exampleCaptcha = new MvcCaptcha("ExampleCaptcha");
-                <div class="control-group">
-                    @Html.LabelFor(model => model.Captcha, new { @class = "control-label" })
-                    <div class="controls">
-                        @Html.Captcha(exampleCaptcha)
-                        @Html.TextBox("CaptchaCode")
-                    </div>
-                </div>
-                
-}
-                <div class="control-group clearfix">
-                    <div class="pull-left">
-                        @Html.CheckBoxFor(model => model.RememberMe)
-                        @Html.LabelFor(model => model.RememberMe, new { @class = "remeber" })
-                    </div>
-                    <div class="pull-right">
-                        <a class="forget" href="">忘记密码？</a>
-                    </div>
-                </div>
-                <div class="control-group text-center">
-                    <button class="btn btn-success">登录</button>
-                </div>
-}
+                        <div class="layui-form-item">
+                            @Html.NETLabelFor(model => model.LoginName)
+                            <div class="layui-input-block">
+
+                                @Html.NETEditorFor(model => model.LoginName)
+                            </div>
+                        </div>
+
+                        <div class="layui-form-item">
+                            @Html.NETLabelFor(model => model.Password)
+                            <div class="layui-input-block">
+
+                                @Html.NETEditorFor(model => model.Password)
+                            </div>
+                        </div>
+
+                        if (Model.EnabledCaptcha)
+                        {
+                            MvcCaptcha exampleCaptcha = new MvcCaptcha("ExampleCaptcha");
+
+                            <div class="layui-form-item">
+                                @Html.NETLabelFor(model => model.Captcha)
+                                <div class="layui-inline">
+                                    <div class="layui-input-inline">
+
+                                        @Html.TextBox("CaptchaCode", null, new { @class = "layui-input captcha-input" })
+                                    </div>
+                                    <div class="layui-input-inline">
+
+                                        <div class="captchat layui-input-inline">
+                                            @Html.Captcha(exampleCaptcha)
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        }
+
+                        <div class="layui-form-item">
+                            <div class="layui-input-block">
+                                @Html.CheckBoxFor(model => model.RememberMe, new { title = "记住密码" })
+                            </div>
+                        </div>
+
+                        <div class="layui-form-item">
+                            <div class="layui-input-block">
+
+                                <div class="layui-inline">
+                                    <div class="layui-input-inline">
+
+                                        <button class="layui-btn layui-btn-danger">登录</button>
+                                    </div>
+                                    <div class="layui-input-inline">
+
+                                        <div class="captchat layui-input-inline">
+                                            <a class="layui-btn layui-btn-warm">注册</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    }
                 </div>
             </div>
         </div>
     </div>
+    <script>
+        layui.use('form', function () {
+            var form = layui.form;
+            //各种基于事件的操作，下面会有进一步介绍
+            form.render();
+        });
+    </script>
 
 </body>
 </html>
