--- a/NetCommunitySolution.Web/Views/Post/PostComment.cshtml
+++ b/NetCommunitySolution.Web/Views/Post/PostComment.cshtml
@@ -1,30 +1,30 @@
-﻿@model IList<NetCommunitySolution.Web.Models.Catalog.PostCommentModel>
+﻿@model IList<NetCommunitySolution.Web.Models.Catalog.CustomerPostCommentModel>
 
 
 <div class="comment-list">
-    <div class="title">
-        <strong>回答</strong>
-    </div>
+    <blockquote class="layui-elem-quote">以下为灌水内容</blockquote>
     <div class="comments">
-        @foreach (var comment in Model)
-        {
-            <div class="comment post-comment">
-                <div class="comment-info">
-                    <div class="user-info">
-                        <a href="@Url.Action("Detail", "Customer", new { customerId = comment.CreatorUserId })" class="username">@(comment.CreatorUserId)</a>
-                                               
-                    </div>
+        @foreach (var item in Model)
+    {
+        <div class="comment post-comment">
+            <div class="comment-info">
+                <div class="user-avatar">
+                    <img src="@item.Avatar"  width="96"/>
                 </div>
-                <div class="comment-content">
-                    <div class="comment-time">
-                        <label>评论时间:</label>
-                        <span class="stat-value">@comment.CreationTime.ToString("g")</span>
-                    </div>
-                    <div class="comment-body">
-                        <p class="comment-text">@Html.Raw(comment.Content)</p>
-                    </div>
+                <div class="user-info">
+                    <a href="@Url.Action("Detail", "Customer", new { customerId = item.CustomerId })" class="username">@(item.NickName)</a>
                 </div>
             </div>
-        }
+            <div class="comment-content">
+                <div class="comment-body">
+                    @Html.Raw(item.Comment.Content)                    
+                </div>
+                <div class="q_time">
+                    <span>@item.Comment.CreationTime.ToString("yyyy.MM.dd HH:mm")</span>
+                </div>
+            </div>
+        </div>
+        <hr class="layui-bg-green">
+}
     </div>
 </div>
