1.增加了用户级别模块 2.完善了后台用户模块 3.完善了后台admin Layou的布局 4.修复了前后台跨区域调整的问题

--- a/NetCommunitySolution.Web/Content/admin.css
+++ b/NetCommunitySolution.Web/Content/admin.css
@@ -4,3 +4,10 @@
     display: table;
     content: " ";
 }
+
+a,a:hover{
+    text-decoration:none;
+}
+.layui-layout-body .layui-layout-admin .layui-header .layui-logo a {
+    color: #009688;
+}
