--- a/NetCommunitySolution.Web/Areas/Operate/Views/Shared/_Sidebar.cshtml
+++ b/NetCommunitySolution.Web/Areas/Operate/Views/Shared/_Sidebar.cshtml
@@ -4,6 +4,13 @@
         <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
 
         <ul class="layui-nav layui-nav-tree layui-inline" lay-filter="demo" style="margin-right: 10px;">
+            <li class="layui-nav-item @if (ViewBag.ActiveMenu == "Customer") { <text> layui-nav-itemed</text>}" ify-unselect>
+                <a href="javascript:;">用户模块</a>
+                <dl class="layui-nav-child">
+                    <dd><a href="@Url.Action("Index","Customer")" @if (ViewBag.ActiveItem == "Customer-List") { <text> class="layui-this" </text> }>用户列表</a></dd>
+                    <dd><a href="@Url.Action("Index","CustomerLevel")" @if (ViewBag.ActiveItem == "Customer-Level") { <text> class="layui-this" </text> }>用户级别</a></dd>
+                </dl>
+            </li>
             <li class="layui-nav-item @if (ViewBag.ActiveMenu == "Setting") { <text> layui-nav-itemed</text>}" ify-unselect>
                 <a href="javascript:;">配置模块</a>
                 <dl class="layui-nav-child">
